CSS fix for labels covering up controls

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,6 +138,7 @@ h1 {
 	cursor: crosshair;
 	position: relative;
 	user-select: none;
+	overflow: hidden;
 }
 
 /* canvas that the local user is drawing onto. Remote users draw onto seperate canvases */
